--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="fish 1">
+    <div class="distance-shark">
         <img src="img/distance-shark.gif">
     </div>
     <div class="fish 2">
@@ -19,18 +19,20 @@
 
 
 
-    <div class="float-right">
+    <div class="shark">
         <img src="img/shark.gif">
     </div>
 
 
-    <div style="text-align: center;">
+    <div class="text" style="text-align: center;">
         <h1>The Ocean</h1>
+        <h1 class="title">Created by JNUTT</h1>
         <h3>My First Self Challenge - An Ocean! Simple right?! Nah!!!</h3>
         <h3>I mean first you must gather your assets...</h3>
         <h3>Then I have to decide on which perspective, do I want to be DOWN IN the Ocean</h3>
         <h3>Or, should it be a right below the surface shot so I can maybe do some birds animations, huh, well there are certainly many variables to consider.</h3>
-        <h3>Back at it!</h3>
+        <h3>This is no easy endeavor, for me at least</h3>
+        <h3>But I want to be inspired and inpsire so I will make my best effort!</h3>
     </div>
     <svg class="sea" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" height="400px" viewBox="0 0 800 350" style="enable-background:new 0 0 800 400;" xml:space="preserve">
       <style type="text/css">
