--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 </head>
 
 <body>
+    <header>
+        <div class="bird">
+            <img src="img/animated-bird-circles.gif">
+        </div>
+        <div class="birds">
+            <img src="img/flock-o-seagulls.gif">
+        </div>
+    </header>
     <div class="distance-shark">
         <img src="img/distance-shark.gif">
     </div>
@@ -27,24 +35,17 @@
     <div class="text" style="text-align: center;">
         <h1>The Ocean</h1>
         <h1 class="title">Created by JNUTT</h1>
-        <h3>My First Self Challenge - An Ocean! Simple right?! Nah!!!</h3>
-
-        <h3>I mean first you must gather your assets...</h3>
-        <h3>Then I have to decide on which perspective, do I want to be DOWN IN the Ocean</h3>
-        <h3>Or, should it be a right below the surface shot so I can maybe do some birds animations, huh, well there are certainly many variables to consider.</h3>
-        <h3>This is no easy endeavor, for me at least</h3>
-        <h3>But I want to be inspired and inpsire so I will make my best effort!</h3>
-
+        <p>Jason Nutt: a gsap developer</p>
     </div>
     <svg class="sea" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" height="400px" viewBox="0 0 800 350" style="enable-background:new 0 0 800 400;" xml:space="preserve">
       <style type="text/css">
-      <![CDATA[
+     
           .st0{opacity:0.76;}
           .st1{fill:url(#SVGID_1_);}
           .st2{fill:url(#SVGID_2_);}
           .st3{fill:url(#SVGID_3_);}
           .st4{fill:none;stroke:#FFFFFF;stroke-width:4;stroke-miterlimit:10;}
-      ]]>
+      
       </style>
       <g id="Sky" class="sky">
           <radialGradient id="SVGID_1_" cx="400" cy="202.5" r="317.3423" gradientUnits="userSpaceOnUse">
