commit index for new ocean

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p>Jason Nutt: a gsap developer</p>
     </div>
 
-    <img style="width: 100%; height:700px;" src="img/Waves-Pattern.png">
+    <img style="width: 100%; height:700px;" src="img/Water-from-the-sea.png">
 
 
 
