commit with new fish instead of shark

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
     <div class="shark">
-        <img src="img/shark.gif">
+        <img src="img/back-n-forth.gif">
     </div>
 
 
@@ -37,6 +37,9 @@
         <h1>The Ocean</h1>
         <h1 class="title">Created by JNUTT</h1>
         <p>Jason Nutt: a gsap developer</p>
+        <p>"I could own the earth and still, all I'd own is earth until,</p>
+        <p>I could paint with all the colors of the wind!!"</p>
+        <p>~POCHAHONTAS~</p>
     </div>
 
     <img style="width: 100%; height:700px;" src="img/sea-bottom.jpg">
