commit for custom ease

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+    <script src="ease/src/CustomEase.js"></script>
     <script src="gsap.js"></script>
 </body>
 
