commit with index changed to water gif

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <p>~POCHAHONTAS~</p>
     </div>
 
-    <img style="width: 100%; height:700px;" src="img/sea-bottom.jpg">
+    <img style="width: 100%; height:700px;" src="img/ocean-water.gif">
 
 
 
